# assistant-langserve-api

./: .gitignore  pyproject.toml
app/: auth.py  config.py  server.py
app/classes/: file_processing_req.py
app/utils/: auth.py  document_helper.py
