[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain-openai = "^0.1.6"
python-multipart = "^0.0.9"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
pypdf = "^4.2.0"
google-auth = "^2.29.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
langchain-nvidia-ai-endpoints = "^0.1.1"
faiss-cpu = "^1.8.0"
transformers = "^4.41.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
